<resources>
    <string name="app_name">Auto Ajuda</string>
    <string name="titulo1">Auto Ajuda App\nUm aplicativo para te ajudar\na viver melhor</string>
    <string name="titulo_home">Tela Principal</string>
    <string name="video">Vídeo</string>
    <string name="videos">Vídeos</string>
    <string name="noticias">Notícias</string>
    <string name="exercicios">Exercícios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="youtube_key">AIzaSyD-6pVEZ7znMz6JYgxgh3vFndPDrgLJuus</string>
    <string name="voltar_lista">Voltar para a lista</string>
    <string name="home">Home</string>
    <string name="motivacional">Motivacional</string>
    <string name="auto_ajuda_para_amor">Auto ajuda\npara o amor</string>
    <string name="auto_ajuda_para_amizades">Auto ajuda\npara amizades</string>
    <string name="trabalho">Trabalho</string>
    <string name="estudos">Estudos</string>
    <string name="espiritual">Espiritual</string>
    <string name="seja_uma_pessoa_melhor">Seja uma\npessoa melhor</string>
    <string name="seja_uma_pessoa_melhor_title">Seja uma pessoa melhor</string>
    <string name="saude">Saúde</string>
    <string name="textomotivacional"><b>Motivação: como começar e permanecer motivado</b>\n\nA maioria das pessoas deseja mudar pelo menos uma coisa em sua vida. Mas pode ser desafiador encontrar a motivação apenas para começar.\n\nA motivação é o impulso para atingir seus objetivos ou necessidades.\n\nQuanto objetivo a alcançar? O que você vai ganhar? E suas expectativas pessoais?\n\nPor que a motivação é importante? A motivação é importante porque:\n\nFornece a você metas para trabalhar. Te ajuda a resolver problemas. Ajuda você a mudar velhos hábitos. Ajuda você a lidar com desafios e oportunidades\n\nA maioria das pessoas luta com a motivação, mas é ainda mais desafiador se você tiver problemas de saúde mental, como depressão ou ansiedade.\n\nAqui estão algumas dicas:\n\nDefina para si um objetivo específico e alcançável.\n\nPense em como incluir esse objetivo em sua vida, o que você precisa fazer para que isso aconteça e, em seguida, estabeleça um prazo para isso (como uma semana).\n\nDivida sua meta em tarefas pequenas e fáceis e defina lembretes regulares.\n\nUse sua família e amigos como apoio - conte-lhes seus objetivos e incentive-os a ajudar a mantê-lo motivado.\n\nManeiras de se manter na linha\n\nTorne sua meta parte de sua rotina usando um diário ou aplicativo para lembretes.\n\nA conversa interna positiva é importante e eficaz no controle da depressão ou ansiedade. Em vez de dizer Não consigo, diga Posso tentar.\n\nA plena atenção ajuda a mantê-lo relaxado e focado.\n\nRecompense-se ao concluir uma etapa ou meta.\n\nAqui estão algumas dicas para se manter motivado:\n\nReveja regularmente seus objetivos e progresso. Ver o progresso é um grande motivador por si só e também melhora sua auto-estima. Continue a definir novas metas. Pense no que você deseja alcançar na próxima semana, no próximo mês e no próximo ano. Enfrente um objetivo de cada vez para não se sentir sobrecarregado.\n\nMantenha o ímpeto. Demora até 3 meses para desenvolver um novo hábito, então manter o ímpeto e a rotina ajuda a parecer mais automático com o tempo.\n\nEncontre mentores - um mentor é alguém com experiência no hábito que você deseja mudar. Encontrar grupos sociais ou de apoio com o mesmo interesse pode ajudá-lo a encontrar um mentor.\n\nCerque-se de pessoas positivas. Amigos e familiares positivos aumentam sua conversa interna positiva, o que também ajuda a controlar os sintomas de depressão e ansiedade.\n\nUse os exercícios como uma de suas metas diárias para melhorar sua saúde mental.\n\nO que fazer se você perder a motivação\n\nRecuos são normais, mas desenvolver resiliência pode ajudá-lo a continuar e recomeçar de onde parou. Aqui estão algumas dicas para ajudá-lo a encontrar sua motivação novamente:\n\nReveja seus objetivos e veja se eles são realistas no cronograma que você definiu. Você pode precisar dividir ainda mais sua meta em metas menores e mais realizáveis.\n\nLembre-se de por que você queria se motivar ou alcançar essa meta em primeiro lugar.\n\nTire a motivação de outras pessoas - sinta-se inspirado lendo um livro, conversando com seu mentor, amigos ou família que alcançaram objetivos semelhantes aos que você definiu.\n\nÀs vezes, você só precisa fazer uma pausa e começar do zero.</string>
    <string name="relacionamentos">Relacionamentos</string>
    <string name="relacionamentostexto"><b>3 dicas para te ajudar a ser melhor em seu relacionamento</b>\n\n - O ressentimento é um assassino de relacionamentos, diz a psicoterapeuta e conselheira de casais Susan Adler. Se queremos relacionamentos mais felizes, precisamos abandonar a culpa, assumir nossos erros e agir de forma a aumentar a conexão, não o conflito.\n\nMuitos problemas de relacionamento, na verdade, têm muito pouco a ver com o relacionamento em si.\n\nEssa é a conclusão - compartilhada em uma conversa na plataforma TED,  em que a psicoterapeuta de Chicago, Susan Adler, chegou depois de anos trabalhando com casais. Na verdade, ela acredita que muitas das chamadas dificuldades de relacionamento que ela vê têm muito mais a ver com os próprios problemas dos indivíduos.\n\nEla diz que a maioria das pessoas tem este ponto cego: - Em vez de ver que nossa própria infelicidade estressa nosso relacionamento, culpamos nosso relacionamento por nossa infelicidade - ficamos bravos, então tentamos nos vingar, então nos perguntamos por que as coisas vão mal.  E depois de repetidas exposições a essa potente mistura de culpa, ressentimento e retaliação, como Adler coloca, vocês ainda podem ser um casal.\n\nTodos nós poderíamos nos beneficiar de ter laços melhores e mais próximos. - Estes são tempos muito difíceis, afirma Adler. - E se pudéssemos inspirar uns aos outros - especialmente as pessoas com quem temos parceria - nos tornarmos versões mais atenciosas e amorosas de nós mesmos?\n\nAqui, ela compartilha três dicas para relacionamentos mais felizes.\n\nPasso 1: Expresse seus sentimentos ao seu parceiro - isto é, qualquer coisa, menos raiva\n\nÉ normal sentir raiva ou chateado quando seu parceiro não atende às suas expectativas ou deixa você na mão de alguma forma. - A raiva é como o guarda-costas das emoções, de acordo com Adler. Muitos de nós confiamos nele para agir como segurança, controlando nossas emoções mais difíceis e desconfortáveis. Ela explica: - Usamos a raiva para afastar nossa dor, nossa tristeza e nossa vulnerabilidade e, no processo, acabamos afastando as pessoas que mais amamos.\n\nNa próxima vez que seu parceiro fizer algo que o deixe vermelho, pare de partir imediatamente para o ataque. Em vez disso, tente se separar (até mesmo ir para o banheiro ou para um canto da sala pode ser suficiente), respire fundo e pergunte-se:  - O que estou realmente sentindo por trás de toda essa raiva? Depois que você teve algum tempo para se acalmar, deixe seu parceiro saber o que está acontecendo com você. Expressar qualquer coisa que não seja frustração ou raiva pode aproximar vocês, diz Adler, e ajudá-lo a iniciar uma conversa - e não outra discussão.\n\nPasso 2: quando seu parceiro perder o controle, pegue o caminho oposto\n\nO dia chegará inevitavelmente em que seu parceiro se comportará imprudentemente - as vezes eles são irritáveis, mal-humorados, irracionais, argumentativos, você escolhe. É natural querer responder de forma semelhante. Resista à tentação e lembre-se - como Adler coloca - Você pode descer ao nível dele ou pode fazer uma escolha diferente.\n\nE qual é essa escolha diferente?  Desafie-se a ser útil, paciente, atencioso e gentil. Todos esses são fatores que a pesquisa indica que tornam os relacionamentos mais felizes. Por exemplo, ela sugere: - Em vez de gritar, pare, respire fundo e imagine dizer: - Sinto muito por você estar chateado ... Como posso ajudar? Não há nada para brigar se você está sendo útil.\n\nPasso 3: Expresse suas tarefas e desejos na forma de declarações - Eu amaria...\n\nNão é nenhum segredo que comunicar suas necessidades é a chave para um relacionamento saudável, mas como você aborda essa comunicação é tão importante. Por exemplo, digamos que você está perdendo o juízo porque seu parceiro está cancelando o encontro noturno mais uma vez porque tem que trabalhar até tarde. Sua inclinação seria dizer a eles: - Você não tem absolutamente nenhuma consideração pelos meus sentimentos! ou - Você nunca arranja tempo para mim !, embora saiba que esses comentários prepararam o terreno para uma discussão acalorada.\n\nComunique o que você quer dele(a), dizendo o que você amaria que acontecesse. Então, você pode dizer algo como: - Eu amaria se pudéssemos descobrir uma noite que desse para nós dois passarmos algum tempo juntos.\n\nHá uma advertência para essa abordagem. Tenha cuidado com suas declarações - Eu amaria, avisa Adler. Não diga coisas negativas como, - Adoraria se você parasse de ser tão idiota. Isso não é positivo; isso é crítica. E não diga coisas que se concentrem no passado, como: - Eu amaria se você tivesse limpado a cozinha ontem ... Concentre-se em seguir em frente e ser positivo. É assim que você define seu parceiro, você e seu relacionamento para o sucesso. É assim que você satisfaz suas necessidades.\n\nEmbora essas técnicas possam ser altamente eficazes, de acordo com Adler, essas 3 dicas não são para todas as situações e não são para todos os casais. Francamente, nem todo relacionamento deve sobreviver; alguns são muito prejudiciais à saúde.\n\nNo final, essas etapas se destinam a criar mais oportunidades de conexão e comunicação, evitar agir a partir de um ponto de irritação e raiva e reconhecer como você pode estar permitindo que seus estresses e preocupações individuais afetem seu relacionamento. Adler diz: - Quando assumimos responsabilidades e valorizamos uns aos outros, nossa nova atitude pode realmente inspirar nosso(a) parceiro(a) a querer fazer a mesma coisa.</string>
    <string name="meu_di_rio">Meu Diário</string>
    <string name="salvar_di_rio">Como foi o seu dia?</string>
    <string name="conte_ao_seu_di_rio_como_foi_o_seu_dia">Conte ao seu diário como foi o seu dia</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar_di_rio">Adicionar diário</string>
    <string name="diario_vazio_msg">Seu diário ainda está vazio.\nClique no botão abaixo para preencher seu diário.</string>
    <string name="adicionar_meta">Adicionar meta</string>
    <string name="lista_de_objetivos">Lista de Objetivos</string>
    <string name="sua_lista_ainda_est_vazia_adicione_uma_meta_clicando_no_bot_o_abaixo">Sua lista ainda está vazia.\nAdicione uma meta clicando no botão abaixo.</string>
    <string name="criar_meta_objetivo">Criar Meta/Objetivo</string>
    <string name="qual_a_sua_meta">Qual a sua meta?</string>
    <string name="gravar_meta">Gravar meta</string>
    <string name="adicionar_imagem"><u>Adicionar Imagem</u></string>
    <string name="excluir_meta">Excluir meta</string>
</resources>