<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentos.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="24dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/red1"
            android:gravity="center_horizontal" />


        <!-- LINHA 1 -->
        <ImageView
            android:id="@+id/imgMotivacao"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_motivacao"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtTitle"/>
        <TextView
            android:id="@+id/txtMotivacional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgMotivacao"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red1"
            android:text="@string/motivacional" />


        <!-- LINHA 2 -->
        <ImageView
            android:id="@+id/imgRelacionamento"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_relacionamento"
            android:layout_below="@+id/txtMotivacional"/>
        <TextView
            android:id="@+id/txtRelacionamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgRelacionamento"
            android:gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:textColor="@color/red1"
            android:text="@string/auto_ajuda_para_amor" />



        <ImageView
            android:id="@+id/imgAmizade"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_amizades"
            android:layout_below="@+id/txtMotivacional"/>
        <TextView
            android:id="@+id/txtAmizade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAmizade"
            android:gravity="center_horizontal"
            android:layout_marginEnd="24dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/red1"
            android:text="@string/auto_ajuda_para_amizades" />


        <!-- LINHA 3 -->

        <ImageView
            android:id="@+id/imgTrabalho"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_trabalho"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtAmizade"/>
        <TextView
            android:id="@+id/txtTrabalho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgTrabalho"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red1"
            android:text="@string/trabalho" />


        <!-- LINHA 4 -->

        <ImageView
            android:id="@+id/imgEstudos"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_estudos"
            android:layout_below="@+id/txtTrabalho"/>
        <TextView
            android:id="@+id/txtEstudos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgEstudos"
            android:gravity="center_horizontal"
            android:layout_marginStart="24dp"
            android:textColor="@color/red1"
            android:text="@string/estudos" />



        <ImageView
            android:id="@+id/imgEspiritual"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_estudos"
            android:layout_below="@+id/txtTrabalho"/>
        <TextView
            android:id="@+id/txtEspiritual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgEspiritual"
            android:gravity="center_horizontal"
            android:layout_marginEnd="24dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/red1"
            android:text="@string/espiritual" />


        <!-- LINHA 5 -->

        <ImageView
            android:id="@+id/imgPessoaMelhor"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_pessoa_melhor"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtEspiritual"/>
        <TextView
            android:id="@+id/txtPessoaMelhor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPessoaMelhor"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red1"
            android:gravity="center_horizontal"
            android:text="@string/seja_uma_pessoa_melhor" />

    </RelativeLayout>

</FrameLayout>