<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ObjetivosSalvarActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInserirMeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/criar_meta_objetivo"
            android:textColor="@color/red1"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInserirMeta"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/edittext_background"
            android:elevation="@dimen/_1sdp"
            android:gravity="top"
            android:hint="@string/qual_a_sua_meta"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:lines="8"
            android:maxLines="12"
            android:minLines="6"
            android:padding="@dimen/_8sdp"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/imgAddImage"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:layout_below="@+id/edtMeta"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:src="@drawable/insert_image" />

        <TextView
            android:id="@+id/txtAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAddImage"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/adicionar_imagem"
            android:textColor="#656565" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAddImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_48sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDeletar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_close"
                android:paddingStart="@dimen/_32sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:visibility="gone"
                tools:visibility="visible"
                android:text="@string/excluir_meta"
                android:textColor="#f8f8f8" />

            <Button
                android:id="@+id/btnGravarMeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_close"
                android:paddingStart="@dimen/_32sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:text="@string/gravar_meta"
                android:textColor="#f8f8f8" />

        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>