<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ObjetivosListaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lista_de_objetivos"
            android:layout_marginTop="@dimen/margin"
            android:textColor="@color/red1"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvObjetivos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:layout_below="@id/txtTitulo" />

        <TextView
            android:id="@+id/txtListaMetasVazia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sua_lista_ainda_est_vazia_adicione_uma_meta_clicando_no_bot_o_abaixo"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:gravity="center"
            android:layout_below="@+id/txtTitulo"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_36sdp"
            android:textColor="@color/red1"
            android:textSize="@dimen/title_text" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_16sdp"
        android:contentDescription="@string/adicionar_meta"
        android:src="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>