<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SalvarDiarioActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtInseririDiario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/salvar_di_rio"
            android:layout_marginTop="@dimen/margin"
            android:textColor="@color/red1"
            android:textSize="@dimen/title_text"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtInseririDiario"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:numStars="5"
            android:saveEnabled="true"
            android:scaleX=".7"
            android:scaleY=".7"
            android:stepSize="1"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp" />

        <EditText
            android:id="@+id/edtDiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:lines="8"
            android:minLines="6"
            android:maxLines="12"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:hint="@string/conte_ao_seu_di_rio_como_foi_o_seu_dia"
            android:gravity="top"
            android:padding="@dimen/_8sdp"
            android:elevation="@dimen/_1sdp" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtDiario"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/salvar"
            android:padding="@dimen/_12sdp" />


    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>